--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT || 21 }}
-          local-dir: 'public'           # Your web root content
+          local-dir: 'public/'           # Your web root content
           server-dir: '/htdocs/'   # Shared hosting web root
 
       # Deploy remaining project files to `_project_`
