change project folder path and remove lost and found (excluded)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,10 +47,9 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT || 21 }}
           local-dir: '/'        # Your CI4 app code directory
-          server-dir: '_project_/'      # Server-side folder for app logic
+          server-dir: 'htdocs/_project_/'      # Server-side folder for app logic
           exclude: |
             - public/**
             - index.php
             - .git/**
             - .github/**
-            - lost+found
