update: Set port using conditional statement. Also, set local directory path.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          port: ${{ secrets.FTP_PORT || 21 }}
+          port: ${{ secrets.FTP_PORT != '' && secrets.FTP_PORT || 21 }}
           local-dir: 'public/'           # Your web root content
           server-dir: ' jamaica.wuaze.com/htdocs/'   # Shared hosting web root
 
@@ -45,8 +45,8 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          port: ${{ secrets.FTP_PORT || 21 }}
-          # local-dir: '/'        # Your CI4 app code directory
+          port: ${{ secrets.FTP_PORT != '' && secrets.FTP_PORT || 21 }}
+          local-dir: '/'        # Your CI4 app code directory
           server-dir: ' jamaica.wuaze.com/htdocs/_project_/'      # Server-side folder for app logic
           exclude: |
             - public/**
