--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT != '' && secrets.FTP_PORT || 21 }}
-          local-dir: /public           # Your web root content
+          local-dir: local-directory/public           # Your web root content
           server-dir: jamaica.wuaze.com/htdocs/   # Shared hosting web root
 
       # Deploy remaining project files to `_project_`
@@ -46,7 +46,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT != '' && secrets.FTP_PORT || 21 }}
-          local-dir: /       # Your CI4 app code directory
+          local-dir: local-directory       # Your CI4 app code directory
           server-dir: jamaica.wuaze.com/htdocs/_project_/     # Server-side folder for app logic
           exclude:
             - public/**
