--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,14 +39,14 @@ jobs:
           server-dir: jamaica.wuaze.com/htdocs/   # Shared hosting web root
 
       # Deploy remaining project files to `_project_`
-      - name: Deploy application code
+      - name: Deploy backend code
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT != '' && secrets.FTP_PORT || 21 }}
-          local-dir:        # Your CI4 app code directory
+          # local-dir:        # Your CI4 app code directory
           server-dir: jamaica.wuaze.com/htdocs/_project_/     # Server-side folder for app logic
           exclude:
             - public/**
